# parrot

./: .clang-format  .gitignore  .ocamlformat  Makefile  README.md  _tags  debug  design.md  dune  dune-project  flake.nix  run  runsmall  submit  treefmt.nix
exec/: checks.c  checks.h  dune  gc.c  gc.h  main.c  main.h  main.ml  snake.c  snake.h
lib/: assembly.ml  dune  errors.ml  exprs.ml  graph.ml  lexer.mll  parser.mly  phases.ml  pretty.ml  runner.ml  utils.ml
lib/compile/: ANF.ml  builtins.ml  closures.ml  common.ml  compile.ml  desugar.ml  desugarCheck.ml  devalue.ml  exprify.ml  rename.ml  wellFormed.ml
test/: dune  test.ml  testing_helper.ml  testing_tests.ml
test/input/: TODO_destruct_not_tup.parr  TODO_destruct_too_few.parr  TODO_destruct_too_many.parr  close.parr  cycle.parr  f_1_args.parr  f_call_chain.parr  f_call_chain_let.parr  f_id_call_bool.parr  f_tup1.parr  f_tup2.parr  initial_printstack.parr  invalid_tup_idx.parr  knot.parr  landin.parr  lists.parr  omega.parr  shadow_letrec.parr  stack_test.parr  top_tup_empty.parr
test/input/do_err/: README  a_many_variables_shadow_bad.err  a_many_variables_shadow_bad.parr  a_shadow_bad.parr  a_shadow_good_no_kw.err  a_shadow_good_no_kw.parr  b_chatgpt.parr  b_nested_unbound.parr  comp_evals_rhs.err  comp_evals_rhs.parr  dup_arg.err  dup_arg.parr  dup_fun.err  dup_fun.parr  index_not_tup.err  index_not_tup.parr  index_oob.err  index_oob.parr  let_in_let_unbound.err  let_in_let_unbound.parr  let_redefined.err  let_redefined.parr  mutual_recursion_no_tail.err  mutual_recursion_no_tail.parr  oomgc1.err  (+8 more)
(+81 files in other folders)
