(subdir compile)

(include_subdirs qualified)

(library
 (name parrot)
 (package parrot)
 (libraries ounit2 extlib str)
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard -annot))
 (preprocess
  (pps
   ppx_variants_conv
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   visitors.ppx))
 (wrapped false))

(ocamllex
 (modules lexer))

(ocamlyacc
 (modules parser))
